# vehicle-rental-management-platform

./: .dockerignore  README.md
app-backend/authentication/: .env.example  entrypoint.sh  pyproject.toml
app-backend/authentication/apps/authentication/: admin.py  apps.py  urls.py
app-backend/authentication/apps/authentication/constants/: permissions_constants.py
app-backend/authentication/apps/authentication/fixtures/: endpoint_fixtures.py
app-backend/authentication/apps/authentication/methods/: axes_methods.py  password_generator_methods.py  re_captcha_methods.py  two_factor_methods.py
app-backend/authentication/apps/authentication/migrations/: 0001_initial.py
app-backend/authentication/apps/authentication/models/: endpoint.py  permission.py  permission_group.py  permission_resource.py  role.py
app-backend/authentication/apps/authentication/permissions/: permission_authorization.py  role_authorization.py
app-backend/authentication/apps/authentication/serializers/: change_password_serializer.py  forgot_password_serializer.py  login_serializer.py  logout_serializers.py  refresh_serializer.py  register_serializer.py  role_serializer.py
app-backend/authentication/apps/authentication/tests/: test_methods.py  (+3 more)
app-backend/authentication/apps/users/: admin.py
app-backend/authentication/authentication/: asgi.py  settings.py  urls.py  wsgi.py
app-backend/operation/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
app-backend/operation/apps/core/: admin.py
app-backend/operation/apps/procedure/: apps.py
app-backend/operation/operation/: asgi.py  settings.py  urls.py  wsgi.py
app-backend/operation/utils/: authentication.py  helpers.py
(+113 files in other folders)
