[project]
name = "authentication"
version = "0.1.0"
description = "Authentication microservice for vehicle rental management platform"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "django-filter>=24.3",
    "drf-spectacular>=0.27",
    "drf-yasg>=1.21",
    "djangorestframework-simplejwt>=5.3",
    "daphne>=4.1",
    "python-dotenv>=1.0",
    "sendgrid>=6.11",
    "django-phonenumber-field[phonenumbers]>=7.3",
    "psycopg2-binary>=2.9",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "authentication.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
