[project]
name = "operation"
version = "0.1.0"
description = "Operation microservice for vehicle rental management platform"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "django-filter>=24.3",
    "drf-spectacular>=0.27",
    "drf-yasg>=1.21",
    "djangorestframework-simplejwt>=5.3",
    "daphne>=4.1",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "operation.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
